[project]
name = "elliptic-curve-point"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "banri", email = "banri.yanahama@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "elliptic_curve_point:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/elliptic_curve_point"]
